fix-the navbar-collapse

--- a/public_html/css/panels/black/style.css
+++ b/public_html/css/panels/black/style.css
@@ -6762,7 +6762,22 @@ body {
   background: #2c98e0;
   border: none;
   color: white;
+  /*CONTAINER INSIDE THE NAV-BAR*/
   /*NAV BAR COLLAPSE ON MOBILE*/
+}
+@media (min-width: 996px) {
+  .content-wrapper .top-navbar {
+    top: 5.1em;
+  }
+}
+@media (max-width: 768px) {
+  .content-wrapper .top-navbar {
+    background: rgba(44, 152, 224, 0.5);
+  }
+}
+.content-wrapper .top-navbar .container {
+  /*ON MOBILE VIEW CHANGE THE NAVBAR TO BE 100% WIDTH AND DECREASE THE SIZE OF THE FONT*/
+  /**/
 }
 @media (max-width: 996px) {
   .content-wrapper .top-navbar .container {
@@ -6770,23 +6785,35 @@ body {
     font-size: 0.9em;
   }
 }
-@media (min-width: 996px) {
-  .content-wrapper .top-navbar {
-    top: 5.1em;
+@media (max-width: 768px) {
+  .content-wrapper .top-navbar .container .nav-bar-header,
+  .content-wrapper .top-navbar .container .navbar-nav,
+  .content-wrapper .top-navbar .container .navbar-collapse {
+    width: 100%;
+    padding: 0;
+    margin: 0;
   }
 }
 .content-wrapper .top-navbar .navbar-collapse {
+  text-align: center;
   /*NAV BAR INSIDE*/
 }
 .content-wrapper .top-navbar .navbar-collapse .navbar-nav {
   display: inline-block;
   float: none;
+  vertical-align: top;
   /*LIST ELEMENT IN THE NAV-BAR (SPECIFIC LINK )*/
 }
 .content-wrapper .top-navbar .navbar-collapse .navbar-nav .navbar-part {
   border-right: 1px solid #55B2EF;
   border-left: 1px solid #1C6DA2;
   /*HREF TEXT*/
+}
+@media (max-width: 776px) {
+  .content-wrapper .top-navbar .navbar-collapse .navbar-nav .navbar-part {
+    border: none;
+    border-bottom: 1px solid white;
+  }
 }
 .content-wrapper .top-navbar .navbar-collapse .navbar-nav .navbar-part .navbar-text {
   color: inherit;
