--- a/resources/assets/less/panels/black/aussie-black.less
+++ b/resources/assets/less/panels/black/aussie-black.less
@@ -3,6 +3,7 @@
 /*ASSIGN VALUES*/
 @image: '/img/panel/black/';
 @font: 'Roboto Condensed';
+@width: 10%;
 
 .btn-space {
   margin-right: 5px;
@@ -47,7 +48,7 @@ body {
         /*IMG TAG*/
         .icon-human-pic {
           display:   block;
-          max-width: 100%;
+          max-width: @width*10;
           height:    auto;
           position:  absolute;
           left:      9px;
@@ -106,35 +107,57 @@ body {
   }
   /*TOP NAVBAR*/
   .top-navbar {
-
-    .container{
-      @media (max-width:996px){
-        width: 100%;
-        font-size: 0.9em;
-      }
-    }
-
     position:   relative;
     background: #2c98e0;
     border:     none;
     color:      white;
 
-    @media (min-width:996px) {
+    @media (min-width: 996px) {
       top: 5.1em;
-
     }
+
+    @media (max-width:768px) {
+      background: rgba(44,152,224,0.5);
+    }
+
+    /*CONTAINER INSIDE THE NAV-BAR*/
+    .container {
+
+      /*ON MOBILE VIEW CHANGE THE NAVBAR TO BE 100% WIDTH AND DECREASE THE SIZE OF THE FONT*/
+      @media (max-width: 996px) {
+        width:     @width*10;
+        font-size: 0.9em;
+      }
+
+      /**/
+      .nav-bar-header,.navbar-nav,.navbar-collapse{
+        @media (max-width:768px){
+          width:@width*10;
+          padding: 0;
+          margin: 0;
+        }
+      }
+    }
+
     /*NAV BAR COLLAPSE ON MOBILE*/
     .navbar-collapse {
+      text-align: center;
 
       /*NAV BAR INSIDE*/
       .navbar-nav {
         display: inline-block;
         float:   none;
+        vertical-align: top;
+
 
         /*LIST ELEMENT IN THE NAV-BAR (SPECIFIC LINK )*/
         .navbar-part {
           border-right: 1px solid #55B2EF;
           border-left:  1px solid #1C6DA2;
+          @media (max-width: 776px) {
+            border:        none;
+            border-bottom: 1px solid white;
+          }
 
           /*HREF TEXT*/
           .navbar-text {
@@ -187,7 +210,7 @@ body {
         /*ARROW ICON (<I> TAG) AT THE START AND THE END */
         .fa-arrow-down {
           color: #EFDE00;
-          @media(max-width:400px){
+          @media (max-width: 400px) {
             font-size: 0.6em;
           }
         }
@@ -275,7 +298,7 @@ body {
         margin-right: 0 !important;
 
         .amount-btn {
-          width:      39%;
+          width:      @width*3.9%;
           margin:     0 13px 15px 0;
           position:   relative;
           top:        8px;
@@ -355,7 +378,7 @@ body {
           background:    linear-gradient(to bottom, #aadc1f 43%, #72a40e 96%);
           filter:        progid:DXImageTransform.Microsoft.gradient(startColorstr='#aadc1f', endColorstr='#72a40e', GradientType=0);
           text-indent:   -5.7px;
-          width:         85%;
+          width:         @width*8.5;
 
           &:hover {
             background: #72a40e;
@@ -371,8 +394,8 @@ body {
       }
     }
     .arrow-rotate {
-      top: 49px;
-      left: -89.1px;
+      top:      49px;
+      left:     -89.1px;
       position: absolute;
     }
   }
